  the relevant section of the category.
* (bug 29109) Allow the automatic edit summary for redirect creation
  show the first bit of the new redirect page.
* (bug 5800) Added $formCallback as a parameter to the hook
  EditPage::showEditForm:initial
* (bug 29723) mw.util.wikiGetlink() now defaults to wgPageName.
* (bug 29680) Add GetDefaultSortkey hook to override the default sortkey.

=== Bug fixes in 1.19 ===
* (bug 28868) Show total pages in the subtitle of an image on the
  file description page for multi-paged documents.
* (bug 28883) Message names for different compression types commonly
  used in Tiff files.
* When translcuding a special page, do not let it interpret url parameters.
* (bug 28887) Special page classes are no longer re-used during 1 request.
* (bug 28888) Searching for something starting with a # sign no longer tells
  the user a page named [[:]] already exists.
* (bug 23002) Imagelinks table not updated after imagemove.
* (bug 27864) Transcluding {{Special:Prefix}} with empty prefix now lists all
  pages.
* (bug 18803) JPEG2000 images should not be uploadable as .jpg files.
* (bug 11868) If using links to count articles, the checking will now be based
  on the real presence of an internal link instead of the "[[" string
* (bug 28287) The "your changes" box for edit conflicts is now read-only.
* (bug 28940) When making a thumb of an SVG, and only specifying the height
  make the width be the max SVG size, not the natrual width of the SVG.
* (bug 1780) Uploading files with non-ascii characters are now forbidden on
  Windows.
* (bug 23464) File: prefixes are now chopped off during uploading.
* (bug 28174) Message config-logo-help amended to not explicitly assume any
  LTR/RTL screen layout.
* (bug 28992) Revision numbers in the patrol log are transformed in the user
  language.
* (bug 27073) ResourceLoaderDynamicStyles marker should be dynamically appended to
  the document head if it doesn't exist.